# snake-arena-hl-trainer

./: .env.example  .gitignore  AGENTS.md  EVAL_PROTOCOL.md  README.md  pyproject.toml  run_monitored.sh  train.py
dashboard/: index.html
experiments/_baseline/: heuristic_notes.md  policy.py
snake_hl/: __init__.py  baseline_snapshot.py  baselines.py  env.py  eval.py  failure_report.py  html_replay.py  policy_runtime.py  replay.py
tests/: test_env.py  test_sandbox.py
