[project]
name = "snake-arena-hl"
version = "0.1.0"
description = "A tiny Snake heuristic-learning arena for agent policy iteration."
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snake_hl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
